--- a/_data/prep.yml
+++ b/_data/prep.yml
@@ -1,3 +1,24 @@
+- nickname: v-is-mv
+  title: (Short note) Volume of convex polytopes equals mixed volume of simplices
+  pdf: v-is-mv.pdf
+  arxiv: http://arxiv.org/abs/2108.12875
+  abstract: >
+    This note provides a simple proof for the equality between the normalized
+    volume of a convex polytope with $m$ vertices and the mixed volume of $m$
+    simplices and thus shows the seemingly restrictive problem of computing mixed
+    volume of simplices is still at least as hard as computing volumes of convex polytopes.
+  bibtex: |
+    @article{Chen2021Volume,
+      archivePrefix = {arXiv},
+      arxivId = {2108.12875},
+      author = {Chen, Tianran and Davis, Robert and Korchevskaia, Evgeniia},
+      eprint = {2108.12875},
+      month = {aug},
+      title = {Volume of convex polytopes equals mixed volume of simplices},
+      url = {http://arxiv.org/abs/2108.12875},
+      year = {2021}
+    }
+
 - nickname: facet-subgraphs
   title: Facets and facet subgraphs of adjacency polytopes
   coauthors: Robert Davis and Evgeniia Korchevskaia
@@ -23,7 +44,7 @@
   bibtex: |
     @article{ChenDavisKorchevskaia2021Facets,
       archivePrefix = {arXiv},
-      arxivId = {2007.11051},
+      arxivId = {2107.12315},
       author = {Chen, Tianran and Davis, Robert and Korchevskaia, Evgeniia},
       eprint = {2107.12315},
       month = {jul},
