--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,3 +1,39 @@
+- nickname: kcycle-homotopy
+  title: A toric deformation method for solving Kuramoto equations on cycle networks
+  coauthors: Robert Davis
+  journal: Nonlinear Dynamics (2022)
+  link: https://doi.org/10.1007/s11071-022-07550-z
+  pdf: kcycle-homotopy.pdf
+  arxiv: http://arxiv.org/abs/1810.05690
+  abstract: >
+    The study of frequency synchronization configurations in Kuramoto models is a
+    ubiquitous mathematical problem that has found applications in many seemingly
+    independent fields. In this paper, we focus on networks whose underlying graph
+    are cycle graphs. Based on the recent result on the upper bound of the
+    frequency synchronization configurations in this context, we propose a toric
+    deformation homotopy method for locating all frequency synchronization
+    configurations with complexity that is linear in this upper bound. Loosely
+    based on the polyhedral homotopy method, this homotopy induces a deformation of
+    the set of the synchronization configurations into a series of toric varieties,
+    yet our method has the distinct advantage of avoiding the costly step of
+    computing mixed cells. We also explore the important consequences of this
+    homotopy method in the context of direct acyclic decomposition of Kuramoto
+    networks and tropical stable intersection points for Kuramoto equations.
+  bibtex: |
+    @article{ChenDavis2022Toric,
+      author = {Tianran Chen and Robert Davis},
+      doi = {10.1007/s11071-022-07550-z},
+      issn = {1573269X},
+      journal = {Nonlinear Dynamics},
+      keywords = {Adjacency polytope,Kuramoto model,Polyhedral homotopy,Tropical geometry},
+      month = {6},
+      pages = {1-20},
+      publisher = {Springer Science and Business Media B.V.},
+      title = {A toric deformation method for solving Kuramoto equations on cycle networks},
+      url = {https://link.springer.com/article/10.1007/s11071-022-07550-z},
+      year = {2022},
+    }
+
 - nickname: draconian
   title: Computing volumes of adjacency polytopes via draconian sequences
   coauthors: Robert Davis, (I made minor contributions)
