--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,26 +1,25 @@
 - nickname: facet-subgraphs
-  title: Facets and facet subgraphs of adjacency polytopes
+  title: Facets and facet subgraphs of symmetric edge polytopes
   coauthors: Robert Davis and Evgeniia Korchevskaia
   journal: Discrete Applied Mathematics (2022)
   pdf: facet-subgraphs.pdf
   arxiv: https://arxiv.org/abs/2107.12315
   abstract: >
-    Adjacency polytopes, a.k.a. symmetric edge polytopes,
-    associated with undirected graphs have been defined and studied
-    in several seemingly-independent areas including
-    number theory, discrete geometry, and dynamical systems.
+    Symmetric edge polytopes, a.k.a. PV-type adjacency polytopes,
+    associated with undirected graphs have been defined and studied in several seemingly independent areas
+    including number theory, discrete geometry, and dynamical systems. 
     In particular, the authors are motivated by the study of
-    the algebraic Kuramoto equations of unmixed form
-    whose Newton polytopes are the adjacency polytopes.
-
-    The interplay between the geometric structure of adjacency polytopes
-    and the topological structure of the underlying graphs is a recurring theme
-    in recent studies.
-    In particular, "facet/face subgraphs" emerged as one of the central concepts
-    in describing this symmetry.
-    Continuing along this line of inquiry we provide a complete description of
-    the correspondence between facets/faces of an adjacency polytope
-    and maximal bipartite subgraphs of the underlying connected graph.
+    the algebraic Kuramoto equations of unmixed form whose Newton polytopes
+    are the symmetric edge polytopes.
+    
+    The interplay between the geometric structure of symmetric edge polytopes
+    and the topological structure of the underlying graphs
+    has been a recurring theme in recent studies.
+    In particular, ``facet/face subgraphs'' have emerged 
+    as one of the central concepts in describing this symmetry.
+    Continuing along this line of inquiry we provide a complete description
+    of the correspondence between facets/faces of a symmetric edge polytope and
+    maximal bipartite subgraphs of the underlying connected graph.
   bibtex: |
     @article{ChenDavisKorchevskaia2022Facets,
       archivePrefix = {arXiv},
@@ -28,7 +27,7 @@
       author = {Chen, Tianran and Davis, Robert and Korchevskaia, Evgeniia},
       eprint = {2107.12315},
       month = {jul},
-      title = {Facets and facet subgraphs of adjacency polytopes},
+      title = {Facets and facet subgraphs of symmetric edge polytopes},
       url = {https://arxiv.org/abs/2107.12315},
       year = {2021}
     }
