--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -2,6 +2,7 @@
   title: Facets and facet subgraphs of symmetric edge polytopes
   coauthors: Robert Davis and Evgeniia Korchevskaia
   journal: Discrete Applied Mathematics (2022)
+  link: https://doi.org/10.1016/j.dam.2022.11.015
   pdf: facet-subgraphs.pdf
   arxiv: https://arxiv.org/abs/2107.12315
   abstract: >
@@ -22,14 +23,16 @@
     maximal bipartite subgraphs of the underlying connected graph.
   bibtex: |
     @article{ChenDavisKorchevskaia2022Facets,
-      archivePrefix = {arXiv},
-      arxivId = {2107.12315},
-      author = {Chen, Tianran and Davis, Robert and Korchevskaia, Evgeniia},
-      eprint = {2107.12315},
-      month = {jul},
       title = {Facets and facet subgraphs of symmetric edge polytopes},
-      url = {https://arxiv.org/abs/2107.12315},
-      year = {2021}
+      journal = {Discrete Applied Mathematics},
+      volume = {328},
+      pages = {139-153},
+      year = {2023},
+      issn = {0166-218X},
+      doi = {https://doi.org/10.1016/j.dam.2022.11.015},
+      url = {https://www.sciencedirect.com/science/article/pii/S0166218X22004462},
+      author = {Tianran Chen and Robert Davis and Evgeniia Korchevskaia},
+      keywords = {Symmetric edge polytope, Adjacency polytope, Kuramoto equations},
     }
 
 - nickname: kcycle-homotopy
