--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,3 +1,27 @@
+- nickname: v-is-mv
+  title: Volume of convex polytopes equals mixed volume of simplices
+  journal: Archiv der Mathematik (2023)
+  pdf: v-is-mv.pdf
+  arxiv: http://arxiv.org/abs/2108.12875
+  abstract: >
+    We provide a simple proof for the equality between 
+    the normalized volume of a convex polytope with $m$ vertices
+    and the mixed volume of $m$ simplices
+    and thus show the seemingly restrictive problem
+    of computing mixed volume of simplices
+    is still at least as hard as computing volumes of convex polytopes in general.
+  bibtex: |
+    @article{Chen2021Volume,
+      archivePrefix = {arXiv},
+      arxivId = {2108.12875},
+      author = {Chen, Tianran},
+      eprint = {2108.12875},
+      month = {aug},
+      title = {Volume of convex polytopes equals mixed volume of simplices},
+      url = {http://arxiv.org/abs/2108.12875},
+      year = {2021}
+    }
+
 - nickname: facet-subgraphs
   title: Facets and facet subgraphs of symmetric edge polytopes
   coauthors: Robert Davis and Evgeniia Korchevskaia
@@ -16,7 +40,7 @@
     The interplay between the geometric structure of symmetric edge polytopes
     and the topological structure of the underlying graphs
     has been a recurring theme in recent studies.
-    In particular, ``facet/face subgraphs'' have emerged 
+    In particular, "facet/face subgraphs" have emerged 
     as one of the central concepts in describing this symmetry.
     Continuing along this line of inquiry we provide a complete description
     of the correspondence between facets/faces of a symmetric edge polytope and
