--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,6 +1,7 @@
 - nickname: v-is-mv
   title: Volume of convex polytopes equals mixed volume of simplices
   journal: Archiv der Mathematik (2023)
+  link: https://doi.org/10.1007/s00013-023-01836-3
   pdf: v-is-mv.pdf
   arxiv: http://arxiv.org/abs/2108.12875
   abstract: >
@@ -11,15 +12,15 @@
     of computing mixed volume of simplices
     is still at least as hard as computing volumes of convex polytopes in general.
   bibtex: |
-    @article{Chen2021Volume,
-      archivePrefix = {arXiv},
-      arxivId = {2108.12875},
-      author = {Chen, Tianran},
-      eprint = {2108.12875},
-      month = {aug},
-      title = {Volume of convex polytopes equals mixed volume of simplices},
-      url = {http://arxiv.org/abs/2108.12875},
-      year = {2021}
+    @article{Chen2023Volume, 
+      year = {2023}, 
+      title = {{Volume of convex polytopes equals mixed volume of simplices}}, 
+      author = {Chen, Tianran}, 
+      journal = {Archiv der Mathematik}, 
+      issn = {0003-889X}, 
+      doi = {10.1007/s00013-023-01836-3}, 
+      pages = {1--6}, 
+      keywords = {}
     }
 
 - nickname: facet-subgraphs
