Adding bernd60 coauthors

--- a/_data/prep.yml
+++ b/_data/prep.yml
@@ -1,5 +1,6 @@
 - nickname: bernd60
   title: Numerical Nonlinear Algebra
+  coauthors: Daniel J. Bates, Paul Breiding, Tianran Chen, Jonathan D. Hauenstein, Anton Leykin, Frank Sottile
   pdf: bernd60.pdf
   arxiv: https://arxiv.org/abs/2302.08585
   abstract: >
