Updating polyposidimo paper

--- a/_data/prep.yml
+++ b/_data/prep.yml
@@ -3,18 +3,15 @@
   pdf: polyposidimo.pdf
   arxiv: http://arxiv.org/abs/2304.08598
   abstract: >
-    Numerical algebraic geometry revolves around the study of
-    solutions to polynomial systems via numerical method.
-    The polyhedral homotopy of Huber and Sturmfels
-    for computing isolated solutions
-    and the concept of witness sets
-    for as numerical representations of non-isolated solution components,
-    put forth by Sommese and Wampler,
-    are two of the fundamental tools in this field.
-    In this paper, we show that a modified
-    polyhedral homotopy can reveal sample sets
-    of non-isolated solution components, akin to witness sets,
+    Numerical algebraic geometry revolves around the study of solutions to polynomial systems via numerical method.
+    The polyhedral homotopy of Huber and Sturmfels for computing isolated solutions
+    and the concept of witness sets as numerical representations of non-isolated solution components,
+    put forth by Sommese and Wampler, are two of the fundamental tools in this field.
+    In this paper, we show that a modified polyhedral homotopy can reveal sample sets of
+    non-isolated solution components, akin to witness sets,
     as by-products from the process of computing isolated solutions.
+    In certain cases, this method also leads to a natural decomposition
+    of the BKK bound into a sum of local contributions from individual irreducible components.
   bibtex: |
     @article{Chen2023Stratified, 
       year = {2023}, 
